ELS Code/main/default/objects/Coreg__c/Coreg__c.object-meta.xml
<CustomObject>
    <label>Coreg</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coregs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>