ELS Code/main/default/objects/Coreg__c/fields/Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Date__c</fullName>
    <label>Add Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>