ELS Code/main/default/objects/Coreg__c/fields/FLAS__c.field-meta.xml
<CustomField>
    <fullName>FLAS__c</fullName>
    <formula>MID(  First_Name__c , 0, 1) &amp; MID(  Last_Name__c , 0, 6)&amp; MID(  Address__c , 0, 9) &amp;  State__c</formula>
    <label>FLAS</label>
    <type>Text</type>
</CustomField>