ELS Code/main/default/objects/Coreg__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>Lead ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>