ELS Code/main/default/objects/Coreg__c/fields/RV_Coreg_ID__c.field-meta.xml
<CustomField>
    <fullName>RV_Coreg_ID__c</fullName>
    <label>RV Coreg ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>