ELS Code/main/default/objects/Coreg__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>225</length>
    <type>Text</type>
</CustomField>