ELS Code/main/default/objects/Coreg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RV_Coreg_ID__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>IP_Address__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Vendor_Subgroup__c</columns>
    <columns>Is_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>